--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,73 @@
-h1 {
-  color: red;
+/* 
+    Index:
+    - Reset
+    - Sizes
+    - Colours
+    - Typography
+*/
+
+/*  || RESET  */
+/* Credit Josh Comeau: https://www.joshwcomeau.com/css/custom-css-reset/ */
+
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+}
+
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
+}
+
+input, button, textarea, select {
+  font: inherit;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+
+#root, #__next {
+  isolation: isolate;
+}
+
+/*  || SIZES  */
+html {
+  font-size: 16px;
+
+  @media (min-width: 768px) {
+    font-size: 18px;
+  }
+  @media (min-width: 1024px) {
+    font-size: 20px;
+  }
+  @media (min-width: 1440px) {
+    font-size: 24px;
+  }
+}
+
+/*  || COLOURS  */
+:root {
+  --primary-black: #222;
+  --primary-white: #fafafa;
+}
+
+/*  || TYPOGRAPHY */
+:root {
+  --serif: Georgia, serif;
+  --sans-serif: "Futura", Arial, sans-serif;
+}
+
+body {
+  font-family: var(--serif);
+  font-size: 1rem;
+  line-height: 2rem;
 }
