--- a/src/global.css
+++ b/src/global.css
@@ -4,6 +4,7 @@
     - Sizes
     - Colours
     - Typography
+    - Utilities
 */
 
 /*  || RESET  */
@@ -43,31 +44,39 @@ p, h1, h2, h3, h4, h5, h6 {
 html {
   font-size: 16px;
 
-  @media (min-width: 768px) {
-    font-size: 18px;
-  }
   @media (min-width: 1024px) {
     font-size: 20px;
-  }
-  @media (min-width: 1440px) {
-    font-size: 24px;
   }
 }
 
 /*  || COLOURS  */
 :root {
-  --primary-black: #222;
-  --primary-white: #fafafa;
+  --neutral-50: #fafafa;
+  --neutral-100: #f5f5f5;
+  --neutral-200: #e5e5e5;
+  --neutral-300: #d4d4d4;
+  --neutral-500: #737373;
+  --neutral-700: #404040;
+  --neutral-900: #171717;
 }
 
 /*  || TYPOGRAPHY */
+@font-face {
+  font-family: "Arial Rounded Bold";
+  src:
+    local("Arial Rounded Bold"),
+    url("./_assets/fonts/Arial Rounded Bold.woff") format("woff");
+}
+
 :root {
-  --serif: Georgia, serif;
-  --sans-serif: "Futura", Arial, sans-serif;
+  --sans-serif: "Arial Rounded Bold", Arial, sans-serif;
 }
 
 body {
-  font-family: var(--serif);
+  font-family: var(--sans-serif);
   font-size: 1rem;
   line-height: 2rem;
+  color: var(--neutral-700);
 }
+
+/*  || UTILITIES */
