--- a/src/_components/navigation.css
+++ b/src/_components/navigation.css
@@ -3,15 +3,64 @@
   display: flex;
   flex-flow: row;
   justify-content: space-between;
-  background: red;
+  align-items: center;
 
   & .nav__logo {
-    font-size: 2rem;
-    line-height: 2rem;
+    font-size: 1rem;
+    line-height: 1rem;
     color: var(--secondary);
+
+    @media (min-width: 1024px) {
+      font-size: 2rem;
+      line-height: 2rem;
+    }
 
     & .nav__umbrella-required {
       color: var(--primary);
+    }
+  }
+
+  & .nav__units {
+    flex-shrink: 0;
+    display: flex;
+    flex-flow: row;
+    border-radius: 2rem;
+    outline: 4px solid var(--neutral-200);
+    background-color: var(--neutral-200);
+
+    & .nav__unit {
+      appearance: none;
+      height: 2rem;
+      width: 3rem;
+      border-radius: 2rem;
+      background-color: var(--neutral-200);
+
+      &:before{
+        display: inline-block;
+        width: 100%;
+        text-align: center;
+      }
+
+      &[value="celsius"]:before {
+        content: "ºC";
+      }
+      &[value="fahrenheit"]:before {
+        content: "ºF";
+      }
+
+      &:checked {
+        background-color: var(--primary);
+        color: var(--neutral-200);
+      }
+
+      &:hover {
+        cursor: pointer;
+      }
+    
+    }
+
+    & label {
+      display: none;
     }
   }
 }
