Update padding of the nav on small screens

--- a/src/_components/navigation.css
+++ b/src/_components/navigation.css
@@ -1,9 +1,13 @@
 .nav {
-  padding: 1rem;
+  padding: .5rem;
   display: flex;
   flex-flow: row;
   justify-content: space-between;
   align-items: center;
+
+  @media (min-width: 1024px) {
+    padding: 1rem;
+  }
 
   & .nav__logo {
     font-size: 1rem;
