--- a/src/_components/weatherToday.css
+++ b/src/_components/weatherToday.css
@@ -24,16 +24,65 @@
       gap: 2rem;
 
       & .weather-today__hero-icon {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         height: 7rem;
-        width: auto;
+        width: 7rem;
 
         @media (min-width: 1024px) {
           height: 9rem;
+          width: 9rem;
         }
 
-        & img {
-          height: inherit;
-          width: auto;
+        & span {
+          height: 7rem;
+          width: 7rem;
+          mask-size: cover;
+          background-color: var(--secondary);
+
+          @media (min-width: 1024px) {
+            height: 9rem;
+            width: 9rem;
+            mask-size: cover;
+            background-color: var(--secondary);
+          }
+          
+          &.clear-day {
+            mask-image: url(../_assets/icons/clear-day.svg);
+          }
+  
+          &.clear-night {
+            mask-image: url(../_assets/icons/clear-night.svg); 
+          }
+  
+          &.cloudy {
+            mask-image: url(../_assets/icons/cloudy.svg);
+          }
+  
+          &.fog {
+            mask-image: url(../_assets/icons/fog.svg);
+          }
+  
+          &.partly-cloudy-day {
+            mask-image: url(../_assets/icons/partly-cloudy-day.svg);
+          }
+  
+          &.partly-cloudy-night {
+            mask-image: url(../_assets/icons/partly-cloudy-night.svg);
+          }
+  
+          &.rain {
+            mask-image: url(../_assets/icons/rain.svg);
+          }
+  
+          &.snow {
+            mask-image: url(../_assets/icons/snow.svg);
+          }
+  
+          &.wind {
+            mask-image: url(../_assets/icons/wind.svg);
+          }
         }
       }
 
